# alphabeta-rs

./: .gitignore  Cargo.toml  README.md  pedigree.txt  pre_ci.sh  run.bash
.github/workflows/: ci.yml  release.yml  rust.yml
SQL/: CREATE TABLE default.sql
alphabeta/: Cargo.toml
alphabeta/src/: ab_neutral.rs  analysis.rs  boot_model.rs  cli.rs  config.rs  divergence.rs  lib.rs  optimizer.rs  plot.rs
benches/: alphabeta_benchmark.rs  loader_benchmark.rs
data/: annotation.txt  divergence.txt  model_wt.txt  nodelist.txt  pedigree_generated.txt  pedigree_wt.txt
data/desired_output/: ABneutral_Boot_CG_estimates_epimutation_rate_estimation_window_gene_0.Rdata  ABneutral_CG_estimates_epimutation_rate_estimation_window_gene_0.Rdata  ABneutral_estimatats_epimutation_rate_estimation_window_gene_0.txt  ABnull_CG_estimates_epimutation_rate_estimation_window_gene_0.Rdata  Boutput_boot_base_alpha.txt  Boutput_boot_base_beta.txt  Boutput_standard_errors_alpha.txt  Boutput_standard_errors_beta.txt  Boutput_standard_errors_beta_alpha.txt  edgelist.fn  methylome_Col0_G0_All.txt  methylome_Col0_G11_L2_All.txt  methylome_Col0_G11_L8_All.txt  methylome_Col0_G1_L2_All.txt  methylome_Col0_G1_L8_All.txt  methylome_Col0_G2_L2_All.txt  methylome_Col0_G2_L8_All.txt  methylome_Col0_G4_L2_All.txt  methylome_Col0_G4_L8_All.txt  methylome_Col0_G5_L2_All.txt  methylome_Col0_G5_L8_All.txt  methylome_Col0_G8_L2_All.txt  methylome_Col0_G8_L8_All.txt  nodelist.fn  out_ABneutral_ABnull_Ftest_p_value.txt  p0uu_in_epimutation_rate_estimation_window_gene_0.txt  pedigree-pdata_epimutation_rate_estimation_window_gene_0.txt
data/methylome_full/: all_steady_state_methylation.txt  analysis.txt  gbM_gene_anotation_extract_Arabidopsis.bed  nodelist.txt  pedigree.txt  steady_state_methylation.txt
data/output/: pedigree.txt
data/output_metaplot/: all_steady_state_methylation.txt  distributions.txt  steady_state_methylation.txt
metaprofile/: Cargo.toml
metaprofile/src/: cli.rs  config.rs  extract.rs  files.rs  genes.rs  lib.rs  plot.rs  setup.rs  windows.rs
methylome/: Cargo.toml
methylome/src/: chromosome.rs  lib.rs  methylation.rs  strand.rs
pedigree/: Cargo.toml
pedigree/src/: cli.rs  dataframe.rs  dmatrix.rs  error.rs  lib.rs
pls/: Cargo.toml
pls/src/: main.rs
progress_bars/: Cargo.toml  cargo.toml
progress_bars/src/: lib.rs
src/: ABneutral.rs  BootModel.rs  ab_neutral.rs  alphabeta.rs  analysis.rs  arguments.rs  bin.rs  boot_model.rs  divergence.rs  error.rs  extract.rs  files.rs  genes.rs  lib.rs  macros.rs  main.rs  methylation_site.rs  pedigree.rs  plot.rs  progress.rs  setup.rs  structs.rs  utils.rs  windows.rs
src/cli/: alphabeta.rs  metaprofile.rs  windows.rs
test/mods/: mods.bed  mods2.bed
