[package]
name = "alphabeta"
version = "0.1.0"
edition = "2021"

[lib]
name = "alphabeta"
path = "src/lib.rs"

[[bin]] 
name = "alphabeta"
path = "src/bin.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argmin = "0.8.0"
argmin-math = { version = "0.3", features = ["ndarray_latest-serde", "nalgebra_latest-serde"] }
float-ord = "0.3.2"
ndarray = { version = "0.15.0", features = ["blas"] }
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
rand = "0.8.5"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "alphabeta_benchmark"
harness = false
