[package]
name = "metaprofile"
version = "0.2.1"
edition = "2021"
description = "Segregate WGS data into windows along the genome. Optionally, run tools such as alphabeta for each window."
license = "GPL-3.0"
repository = "https://github.com/constantingoeldel/alphabeta-rs"

[lib]
name = "metaprofile"
path = "src/lib.rs"

[[bin]]
name = "metaprofile"
path = "src/cli.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argmin = "0.8.0"
argmin-math = { version = "0.3", features = ["ndarray_latest-serde", "nalgebra_latest-serde"] }
ndarray = { version = "0.15.0",  features = ["blas"]}
blas-src = { version = "0.8.0",  features = ["openblas"] }
openblas-src = { version = "0.10",  features = ["static"] }
rand = "0.8.5"
rayon = "1.6.1"
petgraph = "0.6.2"
clap = { version = "4.1.4", features = ["derive"] }
indicatif = "0.17.3"
thiserror = "1.0.40"
itertools = "0.10.5"
plotters = "0.3.4"
ndarray-stats = "0.5.1"
noisy_float = "0.2.0"
ndarray-npy = "0.8.1"
alphabeta ={ path = "../alphabeta" }
methylome ={ path = "../methylome" }
progress_bars ={ path = "../progress_bars" }


