[package]
name = "metaprofile"
version = "0.3.0"
edition = "2021"
description = "Segregate WGS data into windows along the genome. Optionally, run tools such as alphabeta for each window."
license = "GPL-3.0"
repository = "https://github.com/constantingoeldel/alphabeta-rs"

[lib]
name = "metaprofile"
path = "src/lib.rs"

[[bin]]
name = "metaprofile"
path = "src/cli.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.6.1"
clap = { version = "4.1.4", features = ["derive"] }
thiserror = "1.0.40"
itertools = "0.10.5"
plotters = "0.3.4"
alphabeta = { path = "../alphabeta", version = "*"}
methylome = { path = "../methylome", version = "*"}
progress_bars = { path = "../progress_bars", version = "*" }


