[package]
name = "methylome"
version = "0.1.0"
edition = "2021"
description = "Structs and methods for working with methylation data"
license = "GPL-3.0"
repository = "https://github.com/constantingoeldel/alphabeta-rs"

[lib]
name = "methylome"
path = "src/lib.rs"


[dependencies]
thiserror = "1.0.40"
itertools = "0.10.5"