[package]
name = "pedigree"
version = "0.3.0"
edition = "2021"
description = "Build a pedigree from WGS data."
license = "GPL-3.0"
repository = "https://github.com/constantingoeldel/alphabeta-rs"

[lib]
name = "pedigree"
path = "src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15",  features = ["blas"]}
petgraph = "0.6.2"
thiserror = "1.0.40"
methylome ={ path = "../methylome", version = "*"}
progress_bars ={ path = "../progress_bars", version =  "*"}
# viuer = "0.6"

